--- a/reviews.html
+++ b/reviews.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div>
-        <h1>Michel</h1>
-        <p>Oui je pense que c'est tres bien comme projet mais peu d'info dispo en ligne</p>
-        <p>* * * * *</p>
+    <div class="review-container">
+        <h1 class="title">Michel</h1>
+        <p class="review">Oui je pense que c'est tres bien comme projet mais peu d'info dispo en ligne</p>
+        <p class="stars">* * * * *</p>
     </div>
 </body>
 
