--- a/reviews.html
+++ b/reviews.html
@@ -12,7 +12,28 @@
 <body>
     <div class="review-container">
         <h1 class="title">Michel</h1>
-        <p class="review">Oui je pense que c'est tres bien comme projet mais peu d'info dispo en ligne</p>
+        <p class="review">
+            Oui je pense que c'est tres bien comme projet mais peu d'info dispo en ligne
+        </p>
+        <p class="stars">* * * * *</p>
+    </div>
+    <div class="review-container">
+        <h1 class="title">Daniel</h1>
+        <p class="review">Pas mal.</p>
+        <p class="stars">* * * *</p>
+    </div>
+    <div class="review-container">
+        <h1 class="title">Sophie</h1>
+        <p class="review">
+            J'ai trouvé le projet très intéressant, mais je n'ai pas réussi à le faire fonctionner.
+        </p>
+        <p class="stars">* * *</p>
+    </div>
+    <div class="review-container">
+        <h1 class="title">Gégé</h1>
+        <p class="review">
+            J'ai vraiment aimé l'experience de ce projet, je pense que c'est un bon projet pour apprendre à coder.
+        </p>
         <p class="stars">* * * * *</p>
     </div>
 </body>
